--- a/UlamSpiral.cabal
+++ b/UlamSpiral.cabal
@@ -5,6 +5,6 @@ synopsis:           Draw an Ulam Spiral using the diagrams package
 
 executable UlamSpiral
   main-is:          UlamSpiral.hs
-  build-depends:    base, colour, diagrams-lib, diagrams-svg, SVGFonts
+  build-depends:    base, arithmoi, colour, diagrams-lib, diagrams-svg, SVGFonts, vector
   default-language: Haskell2010
   ghc-options:     -Wall -Wcompat -Wunused-packages
