--- a/UlamSpiral.cabal
+++ b/UlamSpiral.cabal
@@ -1,10 +1,20 @@
-cabal-version:      3.4
-name:               UlamSpiral
-version:            0.1.0.0
-synopsis:           Draw an Ulam Spiral using the diagrams package
+cabal-version: 3.4
+
+name: UlamSpiral
+version: 0.1.0.0
+synopsis: Draw an Ulam Spiral using the diagrams package
 
 executable UlamSpiral
-  main-is:          UlamSpiral.hs
-  build-depends:    base, arithmoi, colour, diagrams-lib, diagrams-svg, SVGFonts, vector
+  main-is: UlamSpiral.hs
+  build-depends:
+    , base
+    , arithmoi
+    , colour
+    , diagrams-lib
+    , diagrams-svg
+    , optparse-applicative
+    , SVGFonts
+    , terminal-size
+    , vector
   default-language: Haskell2010
-  ghc-options:     -Wall -Wcompat -Wunused-packages
+  ghc-options: -Wall -Wcompat -Wunused-packages
